src/main/java/com/example/demo/exceptions/errors/GCPFileUploadException.java
package com.example.demo.exceptions.errors;

public class GCPFileUploadException extends RuntimeException {
    public GCPFileUploadException(String message) {
        super(message);
    }
}
